--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <div id="step0" class="step" data-x="-6000" data-y="0" data-z="6000" data-height="1000" data-rotate-y="0"
             data-scale="10" data-rotate-z="0">
             <p>Michael! It's been quite the Journey over these years, and I wanted to take a trip down memory lane</p>
+            <br />
+            <small>Use the arrow keys to navigate →</small>
         </div>
 
 
@@ -43,28 +45,28 @@
             data-image-name="image1" data-height="1000" data-rotate-x="0" data-rotate-y="0">
         </div>
 
-        <div id="step1.2" class="step" data-x="3100" data-y="3000" data-z="1000" data-scale="1" data-folder="2018-09"
-            data-image-name="image2" data-height="1000" data-rotate-x="0" data-rotate-y="0">
-        </div>
-
-        <div id="step1.3" class="step" data-x="2200" data-y="1000" data-z="700" data-scale="1.5" data-folder="2018-09"
+        <div id="step1.2" class="step" data-x="2200" data-y="1000" data-z="700" data-scale="1.5" data-folder="2018-09"
             data-image-name="image3" data-height="1000" data-rotate-x="0" data-rotate-y="0">
         </div>
 
-        <div id="step1.4" class="step" data-x="-1200" data-y="0" data-z="-400" data-scale="2" data-folder="2018-09"
+        <div id="step1.3" class="step" data-x="-1200" data-y="0" data-z="-400" data-scale="2" data-folder="2018-09"
             data-image-name="image4" data-height="1000" data-rotate-x="0" data-rotate-y="0">
         </div>
 
-        <div id="step1.5" class="step" data-x="2600" data-y="-1000" data-z="-900" data-scale="1.5" data-folder="2018-09"
+        <div id="step1.4" class="step" data-x="2600" data-y="-1000" data-z="-900" data-scale="1.5" data-folder="2018-09"
             data-image-name="image5" data-height="1000" data-rotate-x="0" data-rotate-y="0">
         </div>
 
-        <div id="step1.6" class="step" data-x="3000" data-y="-3000" data-z="0" data-scale="1" data-folder="2018-09"
+        <div id="step1.5" class="step" data-x="3000" data-y="-3000" data-z="0" data-scale="1" data-folder="2018-09"
             data-image-name="image6" data-height="1000" data-rotate-x="0" data-rotate-y="0">
         </div>
 
-        <div id="step1.7" class="step" data-x="1400" data-y="-2000" data-z="800" data-scale="1" data-folder="2018-09"
+        <div id="step1.6" class="step" data-x="1400" data-y="-2000" data-z="800" data-scale="1" data-folder="2018-09"
             data-image-name="tech-crunch" data-height="1000" data-rotate-x="0" data-rotate-y="0">
+        </div>
+
+        <div id="step1.7" class="step" data-x="-400" data-y="-3000" data-z="-800" data-scale="1" data-folder="2018-09"
+            data-image-name="tech-crunch-2" data-height="1000" data-rotate-x="0" data-rotate-y="0">
         </div>
 
         <!--<div id="2019-10">-->
@@ -191,6 +193,18 @@
 
         <div id="step8.1" class="step" data-x="35000" data-y="-2000" data-z="-200" data-scale="2" data-folder="2020-12"
             data-image-name="2020-12-holiday" data-height="1000" data-rotate-x="0" data-rotate-y="0">
+        </div>
+
+        <div id="step8.2" class="step" data-x="37000" data-y="-400" data-z="-200" data-scale="1" data-folder="2020-12"
+            data-image-name="holiday-1" data-height="1000" data-rotate-x="0" data-rotate-y="0">
+        </div>
+
+        <div id="step8.3" class="step" data-x="34000" data-y="1200" data-z="-200" data-scale="1.5" data-folder="2020-12"
+            data-image-name="holiday-2" data-height="700" data-rotate-x="0" data-rotate-y="0">
+        </div>
+
+        <div id="step8.4" class="step" data-x="36000" data-y="2000" data-z="-200" data-scale="1" data-folder="2020-12"
+            data-image-name="holiday-3" data-height="1000" data-rotate-x="0" data-rotate-y="0">
         </div>
 
         <!--<div id="2021-11">-->
@@ -406,7 +420,7 @@
         <!--<div id="2023-12">-->
 
         <div id="step18" class="step" data-x="85000" data-y="0" data-z="5000" data-scale="3" data-rotate-y="0">
-            <h1>December 2023</h1>
+            <h1>January 2024</h1>
             <p>Holiday Party</p>
         </div>
 
@@ -435,6 +449,7 @@
         </div> -->
 
     </div>
+
     <audio autoplay="true">
         <source src="" type="audio/mp3" />
     </audio>
@@ -442,6 +457,7 @@
     <div class="hint">
         <p>Use a spacebar or arrow keys to navigate</p>
     </div>
+
     <script>
         if ("ontouchstart"
             in document.documentElement) {
