Fixing last slide

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
         <!--<div id="end">-->
 
-        <div id="step19" class="step" data-x="40000" data-y="0" data-z="100000" data-scale="1" data-rotate-x="-15"
+        <div id="step19" class="step" data-x="92000" data-y="0" data-z="15000" data-scale="1" data-rotate-y="0"
             data-height="750" data-rotate-y="0" data-folder="2021-12" data-video-name="2021-12-hawaii-21">
             <p>Thank you for all your contributions Michael, and we'll miss you!</p>
         </div>
