--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     </div>
 
     <audio autoplay="true">
-        <source src="" type="audio/mp3" />
+        <source src="michael/see-you-again.mp3" type="audio/mp3" />
     </audio>
 
     <div class="hint">
